--- a/assets/js/src/index.html
+++ b/assets/js/src/index.html
@@ -5,6 +5,6 @@
     <title>Webpack App</title>
   </head>
   <body>
-    <div id="app-container"></div>
+    <div id="wrapper"></div>
   </body>
 </html>
